package com.example.application.configs;

/**
 * Класс Configs служит для хранения данных для соединения
 * с сервером
 */
public class Configs {
    /**
     * Поля данных для соединения с сервером
     */
    protected String dbHost = "localhost";
    protected String dbPort = "3306";
    protected String dbUser = "root";
    protected String dbPass = "Asdf22030620";
    protected String dbName = "raycorporation";

}
